Fixed spacing on login and signup buttons so that it's using on Samsung galaxy S

--- a/frontend/src/components/HeaderComponent.css
+++ b/frontend/src/components/HeaderComponent.css
@@ -191,3 +191,7 @@
 #field-title {
   font-size: 16px;
 }
+
+.field-padding {
+  padding-bottom: .8em;
+}
